refactor: project structs

--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -63,3 +63,9 @@
   height: 100%;
   object-fit: cover;
 }
+
+.common-box() {
+  border-radius: var(--theme-box-border-radius);
+  background-color: var(--theme-box-background);
+  transition: background-color 0.3s;
+}
