--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -8,3 +8,29 @@ body,
   width: 100%;
   height: 100%;
 }
+
+html {
+  --theme-padding: 20px;
+  --theme-box-border-radius: 10px;
+
+  &[theme-mode="light"] {
+    --theme-background: #f8f8f9;
+    --theme-box-background: darken(#f8f8f9, 10%);
+    --theme-font-color: #1f293f;
+    --theme-file-item-hover-color: #212121;
+    --theme-file-item-active-background: #b8b3b3;
+    --theme-file-item-selected-background: #d4d2d2;
+    --theme-file-item-selected-color: #2962ff;
+  }
+
+  &[theme-mode="dark"] {
+    --theme-background: #192227;
+    --theme-box-background: lighten(#192227, 10%);
+    --theme-font-color: #f5f5f5;
+    --theme-file-item-hover-color: #5f7a87;
+    --theme-file-item-active-background: #758085;
+    --theme-file-item-selected-background: #6a787e;
+    --theme-file-item-selected-color: #00e5ff;
+  }
+
+}
